# MinesweeperSFML

./: CMakeLists.txt  Makefile  README.md  mines_logic.cpp  mines_logic.h  testmod.cpp
src/: main.cpp  mines_logic.cpp  mines_logic.h
